--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Public+Sans&display=swap');
+
+body {
+    font-family: 'Public Sans', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Bebas Neue', cursive; 
+}
 .jumbotron {
     background-image: url(../images/sky.jpg);
     background-size: cover;
